Dirf - lista e exclusão